--- a/config/optional/feeds.feed_type.mo_org_units_to_taxonomy.yml
+++ b/config/optional/feeds.feed_type.mo_org_units_to_taxonomy.yml
@@ -24,7 +24,7 @@ fetcher_configuration:
 parser: jsonpath
 parser_configuration:
   context:
-    value: '$.*'
+    value: '$.items.*'
   sources:
     name:
       label: name
