Update web forms to current status.

--- a/config/optional/webform.webform.change_organizational_unit.yml
+++ b/config/optional/webform.webform.change_organizational_unit.yml
@@ -13,90 +13,7 @@ id: change_organizational_unit
 title: 'Change Organizational Unit'
 description: 'Send a request for creating a new organizational unit and submit it for approval.'
 category: GIR
-elements: |
-  search_for_unit:
-    '#type': webform_wizard_page
-    '#title': 'Search for Unit'
-    organizational_unit:
-      '#type': entity_autocomplete
-      '#title': 'Organizational Unit'
-      '#target_type': taxonomy_term
-      '#selection_handler': 'default:taxonomy_term'
-      '#selection_settings':
-        target_bundles:
-          orgunit: orgunit
-        sort:
-          field: name
-          direction: ASC
-        auto_create: false
-        auto_create_bundle: orgunit
-  edit_unit:
-    '#type': webform_wizard_page
-    '#title': 'Edit Unit'
-    organizational_data:
-      '#type': fieldset
-      '#title': 'Organizational Data'
-      name:
-        '#type': textfield
-        '#title': Name
-        '#required': true
-      display_in_gui:
-        '#type': checkbox
-        '#title': 'Display in GUI'
-      parent_unit:
-        '#type': entity_autocomplete
-        '#title': 'Parent Unit'
-        '#target_type': taxonomy_term
-        '#selection_handler': 'default:taxonomy_term'
-        '#selection_settings':
-          target_bundles:
-            orgunit: orgunit
-          sort:
-            field: name
-            direction: ASC
-          auto_create: false
-          auto_create_bundle: orgunit
-      owner:
-        '#type': webform_entity_select
-        '#title': Owner
-        '#target_type': user
-        '#selection_handler': 'default:user'
-        '#selection_settings':
-          include_anonymous: true
-          filter:
-            type: _none
-      location:
-        '#type': webform_term_select
-        '#title': Location
-        '#vocabulary': location
-        '#breadcrumb_delimiter': ''
-      start_date:
-        '#type': date
-        '#title': 'Start date'
-        '#date_date_format': ''
-      end_date:
-        '#type': date
-        '#title': 'End date'
-        '#date_date_format': ''
-      approval_information:
-        '#type': fieldset
-        '#title': 'Approval Information'
-        time_limit:
-          '#type': date
-          '#title': 'Time Limit'
-          '#date_date_format': ''
-        justification:
-          '#type': textfield
-          '#title': Justification
-        approver:
-          '#type': webform_entity_select
-          '#title': Approver
-          '#target_type': user
-          '#selection_handler': 'default:user'
-          '#selection_settings':
-            include_anonymous: false
-            filter:
-              type: _none
+elements: "search_for_unit:\n  '#type': webform_wizard_page\n  '#title': 'Search for Unit'\n  organizational_unit:\n    '#type': entity_autocomplete\n    '#title': 'Organizational Unit'\n    '#target_type': taxonomy_term\n    '#selection_handler': 'default:taxonomy_term'\n    '#selection_settings':\n      target_bundles:\n        orgunit: orgunit\n      sort:\n        field: name\n        direction: ASC\n      auto_create: false\n      auto_create_bundle: orgunit\nedit_unit:\n  '#type': webform_wizard_page\n  '#title': 'Edit Unit'\n  organizational_data:\n    '#type': fieldset\n    '#title': 'Organizational Data'\n    name:\n      '#type': textfield\n      '#title': Name\n      '#required': true\n    parent_unit:\n      '#type': entity_autocomplete\n      '#title': 'Parent Unit'\n      '#target_type': taxonomy_term\n      '#selection_handler': 'default:taxonomy_term'\n      '#selection_settings':\n        target_bundles:\n          orgunit: orgunit\n        sort:\n          field: name\n          direction: ASC\n        auto_create: false\n        auto_create_bundle: orgunit\n    owner:\n      '#type': entity_autocomplete\n      '#title': Owner\n      '#target_type': user\n      '#selection_handler': 'default:user'\n      '#selection_settings':\n        include_anonymous: false\n        filter:\n          type: _none\n    start_date:\n      '#type': date\n      '#title': 'Start date'\n      '#date_date_format': ''\n    end_date:\n      '#type': date\n      '#title': 'End date'\n      '#date_date_format': ''\n    approval_information:\n      '#type': fieldset\n      '#title': 'Approval Information'\n      time_limit:\n        '#type': date\n        '#title': 'Time Limit'\n        '#date_date_format': ''\n      justification:\n        '#type': textfield\n        '#title': Justification\n      approver:\n        '#type': entity_autocomplete\n        '#title': Approver\n        '#target_type': user\n        '#selection_handler': 'default:user'\n        '#selection_settings':\n          include_anonymous: true\n          filter:\n            type: _none"
 css: ''
 javascript: ''
 settings:
