--- a/config/optional/webform.webform.request_new_organizational_unit.yml
+++ b/config/optional/webform.webform.request_new_organizational_unit.yml
@@ -34,52 +34,7 @@ id: request_new_organizational_unit
 title: 'Request New External Organizational Unit'
 description: 'Send a request for creating a new organizational unit and submit it for approval.'
 category: GIR
-elements: |
-  organizational_data:
-    '#type': fieldset
-    '#title': 'Organizational Data'
-    name:
-      '#type': textfield
-      '#title': Name
-      '#required': true
-    owner:
-      '#type': entity_autocomplete
-      '#title': Owner
-      '#target_type': user
-      '#selection_handler': 'default:user'
-      '#selection_settings':
-        include_anonymous: false
-        filter:
-          type: _none
-      '#required': true
-    start_date:
-      '#type': date
-      '#title': 'Start date'
-      '#date_date_format': ''
-      '#required': true
-    end_date:
-      '#type': date
-      '#title': 'End date'
-      '#date_date_format': ''
-  approval_information:
-    '#type': fieldset
-    '#title': 'Approval Information'
-    time_limit:
-      '#type': date
-      '#title': 'Time Limit'
-      '#date_date_format': ''
-    justification:
-      '#type': textfield
-      '#title': Justification
-    approver:
-      '#type': webform_entity_select
-      '#title': Approver
-      '#target_type': user
-      '#selection_handler': 'default:user'
-      '#selection_settings':
-        include_anonymous: false
-        filter:
-          type: _none
+elements: "organizational_data:\n  '#type': fieldset\n  '#title': 'Organizational Data'\n  name:\n    '#type': textfield\n    '#title': Name\n    '#required': true\n  owner:\n    '#type': entity_autocomplete\n    '#title': Owner\n    '#target_type': user\n    '#selection_handler': 'default:user'\n    '#selection_settings':\n      include_anonymous: false\n      filter:\n        type: _none\n    '#required': true\n  start_date:\n    '#type': date\n    '#title': 'Start date'\n    '#date_date_format': ''\n    '#required': true\n  end_date:\n    '#type': date\n    '#title': 'End date'\n    '#date_date_format': ''\napproval_information:\n  '#type': fieldset\n  '#title': 'Approval Information'\n  time_limit:\n    '#type': date\n    '#title': 'Time Limit'\n    '#date_date_format': ''\n  justification:\n    '#type': textfield\n    '#title': Justification\n  approver:\n    '#type': entity_autocomplete\n    '#title': Approver\n    '#target_type': user\n    '#selection_handler': 'default:user'\n    '#selection_settings':\n      include_anonymous: false\n      filter:\n        type: _none"
 css: ''
 javascript: ''
 settings:
