--- a/config/optional/webform.webform.request_new_external.yml
+++ b/config/optional/webform.webform.request_new_external.yml
@@ -13,105 +13,7 @@ id: request_new_external
 title: 'Request New External'
 description: 'Create an entity for a person joining GIR, along with the corresponding organizational&nbsp; identities.'
 category: GIR
-elements: |
-  personal_data:
-    '#type': fieldset
-    '#title': 'Personal Data'
-    name:
-      '#type': webform_name
-      '#title': Name
-      '#title__access': false
-      '#first__required': true
-      '#middle__access': false
-      '#last__required': true
-      '#suffix__access': false
-      '#degree__access': false
-      '#flexbox': '1'
-      '#required': true
-    telephone_number:
-      '#type': tel
-      '#title': 'Telephone Number'
-    email_address:
-      '#type': email
-      '#title': 'Email Address'
-    consultancy:
-      '#type': entity_autocomplete
-      '#title': Consultancy
-      '#target_type': taxonomy_term
-      '#selection_handler': 'default:taxonomy_term'
-      '#selection_settings':
-        target_bundles:
-          consultancy: consultancy
-        auto_create: false
-        auto_create_bundle: consultancy
-      '#required': true
-  employment_data:
-    '#type': fieldset
-    '#title': 'Employment Data'
-    consultant_type:
-      '#type': webform_term_select
-      '#title': 'Consultant Type'
-      '#vocabulary': consultant_type
-      '#breadcrumb_delimiter': ''
-      '#required': true
-    location:
-      '#type': webform_term_select
-      '#title': Location
-      '#vocabulary': location
-      '#breadcrumb_delimiter': ''
-    cost_center:
-      '#type': entity_autocomplete
-      '#title': 'Cost Center'
-      '#target_type': taxonomy_term
-      '#selection_handler': 'default:taxonomy_term'
-      '#selection_settings':
-        target_bundles:
-          cost_center: cost_center
-        auto_create: false
-        auto_create_bundle: cost_center
-      '#required': true
-    organizational_unit:
-      '#type': entity_autocomplete
-      '#title': 'Organizational Unit'
-      '#multiple': true
-      '#target_type': taxonomy_term
-      '#selection_handler': 'default:taxonomy_term'
-      '#selection_settings':
-        target_bundles:
-          orgunit: orgunit
-        sort:
-          field: name
-          direction: ASC
-        auto_create: false
-        auto_create_bundle: orgunit
-      '#required': true
-    start_date:
-      '#type': date
-      '#title': 'Start date'
-      '#date_date_format': ''
-    end_date:
-      '#type': date
-      '#title': 'End date'
-      '#date_date_format': ''
-  approval_information:
-    '#type': fieldset
-    '#title': 'Approval Information'
-    time_limit:
-      '#type': date
-      '#title': 'Time Limit'
-      '#date_date_format': ''
-    justification:
-      '#type': textfield
-      '#title': Justification
-    approver:
-      '#type': webform_entity_select
-      '#title': Approver
-      '#target_type': user
-      '#selection_handler': 'default:user'
-      '#selection_settings':
-        include_anonymous: true
-        filter:
-          type: _none
+elements: "personal_data:\n  '#type': fieldset\n  '#title': 'Personal Data'\n  name:\n    '#type': webform_name\n    '#title': Name\n    '#title__access': false\n    '#first__required': true\n    '#middle__access': false\n    '#last__required': true\n    '#suffix__access': false\n    '#degree__access': false\n    '#flexbox': '1'\n    '#required': true\n  telephone_number:\n    '#type': tel\n    '#title': 'Telephone Number'\n  email_address:\n    '#type': email\n    '#title': 'Email Address'\n  consultancy:\n    '#type': entity_autocomplete\n    '#title': Consultancy\n    '#target_type': taxonomy_term\n    '#selection_handler': 'default:taxonomy_term'\n    '#selection_settings':\n      target_bundles:\n        consultancy: consultancy\n      auto_create: false\n      auto_create_bundle: consultancy\n    '#required': true\nemployment_data:\n  '#type': fieldset\n  '#title': 'Employment Data'\n  consultant_type:\n    '#type': webform_term_select\n    '#title': 'Consultant Type'\n    '#vocabulary': consultant_type\n    '#breadcrumb_delimiter': ''\n    '#required': true\n  cost_center:\n    '#type': entity_autocomplete\n    '#title': 'Cost Center'\n    '#target_type': taxonomy_term\n    '#selection_handler': 'default:taxonomy_term'\n    '#selection_settings':\n      target_bundles:\n        cost_center: cost_center\n      auto_create: false\n      auto_create_bundle: cost_center\n    '#required': true\n  organizational_unit:\n    '#type': entity_autocomplete\n    '#title': 'Organizational Unit'\n    '#multiple': true\n    '#target_type': taxonomy_term\n    '#selection_handler': 'default:taxonomy_term'\n    '#selection_settings':\n      target_bundles:\n        orgunit: orgunit\n      sort:\n        field: name\n        direction: ASC\n      auto_create: false\n      auto_create_bundle: orgunit\n    '#required': true\n  location:\n    '#type': webform_address\n    '#title': Location\n    '#address__title': Location\n    '#address_2__access': false\n    '#city__access': false\n    '#state_province__access': false\n    '#postal_code__access': false\n  start_date:\n    '#type': date\n    '#title': 'Start date'\n    '#date_date_format': ''\n  end_date:\n    '#type': date\n    '#title': 'End date'\n    '#date_date_format': ''\napproval_information:\n  '#type': fieldset\n  '#title': 'Approval Information'\n  time_limit:\n    '#type': date\n    '#title': 'Time Limit'\n    '#date_date_format': ''\n  justification:\n    '#type': textfield\n    '#title': Justification\n  approver:\n    '#type': entity_autocomplete\n    '#title': Approver\n    '#target_type': user\n    '#selection_handler': 'default:user'\n    '#selection_settings':\n      include_anonymous: true\n      filter:\n        type: _none"
 css: ''
 javascript: ''
 settings:
