Fix up org unit forms, start improving employee fetching.

--- a/config/optional/webform.webform.disable_organizational_unit.yml
+++ b/config/optional/webform.webform.disable_organizational_unit.yml
@@ -2,7 +2,28 @@ langcode: en
 status: open
 dependencies:
   module:
+    - os2forms
     - os2forms_forloeb
+    - webform_entity_print
+third_party_settings:
+  os2forms:
+    os2forms_nemid:
+      webform_type: ''
+      nemlogin_auto_redirect: 0
+  webform_entity_print:
+    template:
+      header: ''
+      footer: ''
+      css: ''
+    export_types:
+      pdf:
+        enabled: true
+        link_text: ''
+        link_attributes: {  }
+      word_docx:
+        enabled: false
+        link_text: ''
+        link_attributes: {  }
 open: null
 close: null
 weight: 0
@@ -10,10 +31,65 @@ uid: 1
 template: false
 archive: false
 id: disable_organizational_unit
-title: 'Disable Organizational Unit'
+title: 'Disable External Organizational Unit'
 description: 'Send a request for disabling an organizational unit and submit it for approval.'
 category: GIR
-elements: "enter_organizational_unit:\n  '#type': webform_wizard_page\n  '#title': 'Enter organizational unit'\n  search:\n    '#type': fieldset\n    '#title': Search\n    organizational_unit:\n      '#type': entity_autocomplete\n      '#title': 'Organizational Unit'\n      '#target_type': taxonomy_term\n      '#selection_handler': 'default:taxonomy_term'\n      '#selection_settings':\n        target_bundles:\n          orgunit: orgunit\n        sort:\n          field: name\n          direction: ASC\n        auto_create: false\n        auto_create_bundle: orgunit\n      '#required': true\nedit_organizational_unit:\n  '#type': webform_wizard_page\n  '#title': 'Edit Organizational Unit'\n  organizational_data:\n    '#type': fieldset\n    '#title': 'Organizational Data'\n    name:\n      '#type': textfield\n      '#title': Name\n      '#disabled': true\n      '#readonly': true\n      '#required': true\n    parent_unit:\n      '#type': webform_term_select\n      '#title': 'Parent Unit'\n      '#disabled': true\n      '#prepopulate': true\n      '#vocabulary': consultancies\n      '#breadcrumb_delimiter': ''\n  end_date:\n    '#type': date\n    '#title': 'End date'\n    '#date_date_format': ''\n  approval_information:\n    '#type': fieldset\n    '#title': 'Approval Information'\n    time_limit:\n      '#type': date\n      '#title': 'Time Limit'\n      '#date_date_format': ''\n    justification:\n      '#type': textfield\n      '#title': Justification\n    approver:\n      '#type': entity_autocomplete\n      '#title': Approver\n      '#target_type': user\n      '#selection_handler': 'default:user'\n      '#selection_settings':\n        include_anonymous: true\n        filter:\n          type: _none"
+elements: |
+  enter_organizational_unit:
+    '#type': webform_wizard_page
+    '#title': 'Enter organizational unit'
+    search:
+      '#type': fieldset
+      '#title': Search
+      organizational_unit:
+        '#type': entity_autocomplete
+        '#title': 'Organizational Unit'
+        '#required': true
+        '#target_type': taxonomy_term
+        '#selection_handler': 'default:taxonomy_term'
+        '#selection_settings':
+          target_bundles:
+            consultancy: consultancy
+          sort:
+            field: name
+            direction: ASC
+          auto_create: false
+          auto_create_bundle: consultancy
+  edit_organizational_unit:
+    '#type': webform_wizard_page
+    '#title': 'Edit Organizational Unit'
+    organizational_data:
+      '#type': fieldset
+      '#title': 'Organizational Data'
+      name:
+        '#type': textfield
+        '#title': Name
+        '#disabled': true
+        '#readonly': true
+        '#required': true
+    end_date:
+      '#type': date
+      '#title': 'End date'
+      '#date_date_format': ''
+    approval_information:
+      '#type': fieldset
+      '#title': 'Approval Information'
+      time_limit:
+        '#type': date
+        '#title': 'Time Limit'
+        '#date_date_format': ''
+      justification:
+        '#type': textfield
+        '#title': Justification
+      approver:
+        '#type': entity_autocomplete
+        '#title': Approver
+        '#target_type': user
+        '#selection_handler': 'default:user'
+        '#selection_settings':
+          include_anonymous: true
+          filter:
+            type: _none
 css: ''
 javascript: ''
 settings:
@@ -199,7 +275,13 @@ handlers:
     notes: ''
     handler_id: load_organization_unit
     status: true
-    conditions: {  }
+    conditions:
+      enabled:
+        ':input[name="organizational_unit"]':
+          filled: true
+        ':input[name="name"]':
+          empty: true
     weight: 0
     settings: {  }
+variants: {  }
 variants: {  }
