--- a/config/optional/webform.webform.change_organizational_unit.yml
+++ b/config/optional/webform.webform.change_organizational_unit.yml
@@ -2,7 +2,27 @@ langcode: en
 status: open
 dependencies:
   module:
-    - maestro_webform
+    - os2forms
+    - webform_entity_print
+third_party_settings:
+  os2forms:
+    os2forms_nemid:
+      webform_type: ''
+      nemlogin_auto_redirect: 0
+  webform_entity_print:
+    template:
+      header: ''
+      footer: ''
+      css: ''
+    export_types:
+      pdf:
+        enabled: true
+        link_text: ''
+        link_attributes: {  }
+      word_docx:
+        enabled: false
+        link_text: ''
+        link_attributes: {  }
 open: null
 close: null
 weight: 0
@@ -10,10 +30,72 @@ uid: 1
 template: false
 archive: false
 id: change_organizational_unit
-title: 'Change Organizational Unit'
+title: 'Change External Organizational Unit'
 description: 'Send a request for creating a new organizational unit and submit it for approval.'
 category: GIR
-elements: "search_for_unit:\n  '#type': webform_wizard_page\n  '#title': 'Search for Unit'\n  organizational_unit:\n    '#type': entity_autocomplete\n    '#title': 'Organizational Unit'\n    '#target_type': taxonomy_term\n    '#selection_handler': 'default:taxonomy_term'\n    '#selection_settings':\n      target_bundles:\n        orgunit: orgunit\n      sort:\n        field: name\n        direction: ASC\n      auto_create: false\n      auto_create_bundle: orgunit\nedit_unit:\n  '#type': webform_wizard_page\n  '#title': 'Edit Unit'\n  organizational_data:\n    '#type': fieldset\n    '#title': 'Organizational Data'\n    name:\n      '#type': textfield\n      '#title': Name\n      '#required': true\n    parent_unit:\n      '#type': entity_autocomplete\n      '#title': 'Parent Unit'\n      '#target_type': taxonomy_term\n      '#selection_handler': 'default:taxonomy_term'\n      '#selection_settings':\n        target_bundles:\n          orgunit: orgunit\n        sort:\n          field: name\n          direction: ASC\n        auto_create: false\n        auto_create_bundle: orgunit\n    owner:\n      '#type': entity_autocomplete\n      '#title': Owner\n      '#target_type': user\n      '#selection_handler': 'default:user'\n      '#selection_settings':\n        include_anonymous: false\n        filter:\n          type: _none\n    start_date:\n      '#type': date\n      '#title': 'Start date'\n      '#date_date_format': ''\n    end_date:\n      '#type': date\n      '#title': 'End date'\n      '#date_date_format': ''\n    approval_information:\n      '#type': fieldset\n      '#title': 'Approval Information'\n      time_limit:\n        '#type': date\n        '#title': 'Time Limit'\n        '#date_date_format': ''\n      justification:\n        '#type': textfield\n        '#title': Justification\n      approver:\n        '#type': entity_autocomplete\n        '#title': Approver\n        '#target_type': user\n        '#selection_handler': 'default:user'\n        '#selection_settings':\n          include_anonymous: true\n          filter:\n            type: _none"
+elements: |
+  search_for_unit:
+    '#type': webform_wizard_page
+    '#title': 'Search for Unit'
+    organizational_unit:
+      '#type': entity_autocomplete
+      '#title': 'Organizational Unit'
+      '#target_type': taxonomy_term
+      '#selection_handler': 'default:taxonomy_term'
+      '#selection_settings':
+        target_bundles:
+          consultancy: consultancy
+        sort:
+          field: name
+          direction: ASC
+        auto_create: false
+        auto_create_bundle: consultancy
+  edit_unit:
+    '#type': webform_wizard_page
+    '#title': 'Edit Unit'
+    organizational_data:
+      '#type': fieldset
+      '#title': 'Organizational Data'
+      name:
+        '#type': textfield
+        '#title': Name
+        '#required': true
+      owner:
+        '#type': entity_autocomplete
+        '#title': Owner
+        '#target_type': user
+        '#selection_handler': 'default:user'
+        '#selection_settings':
+          include_anonymous: false
+          filter:
+            type: _none
+      start_date:
+        '#type': date
+        '#title': 'Start date'
+        '#date_date_format': ''
+      end_date:
+        '#type': date
+        '#title': 'End date'
+        '#date_date_format': ''
+      approval_information:
+        '#type': fieldset
+        '#title': 'Approval Information'
+        time_limit:
+          '#type': date
+          '#title': 'Time Limit'
+          '#date_date_format': ''
+        justification:
+          '#type': textfield
+          '#title': Justification
+        approver:
+          '#type': entity_autocomplete
+          '#title': Approver
+          '#target_type': user
+          '#selection_handler': 'default:user'
+          '#selection_settings':
+            include_anonymous: true
+            filter:
+              type: _none
 css: ''
 javascript: ''
 settings:
@@ -193,16 +275,18 @@ access:
     users: {  }
     permissions: {  }
 handlers:
-  spawn_maestro_workflow:
-    id: maestro
-    label: 'Spawn Maestro Workflow'
+  load_organization_unit:
+    id: org_unit
+    label: 'Load Organization Unit'
     notes: ''
-    handler_id: spawn_maestro_workflow
+    handler_id: load_organization_unit
     status: true
-    conditions: {  }
+    conditions:
+      enabled:
+        ':input[name="organizational_unit"]':
+          filled: true
+        ':input[name="name"]':
+          empty: true
     weight: 0
-    settings:
-      maestro_template: request_org_unit
-      maestro_message_success: ''
-      maestro_message_failure: ''
+    settings: {  }
 variants: {  }
