--- a/config/optional/webform.webform.disable_external.yml
+++ b/config/optional/webform.webform.disable_external.yml
@@ -2,8 +2,8 @@ langcode: en
 status: open
 dependencies:
   module:
-    - maestro_webform
     - os2forms
+    - os2forms_forloeb
     - webform_entity_print
 third_party_settings:
   os2forms:
@@ -34,7 +34,69 @@ id: disable_external
 title: 'Disable External'
 description: 'Disable an external consultant by setting the end date.'
 category: GIR
-elements: "search:\n  '#type': fieldset\n  '#title': Search\n  external_employee:\n    '#type': entity_autocomplete\n    '#title': 'External Employee'\n    '#target_type': user\n    '#selection_handler': 'default:user'\n    '#selection_settings':\n      include_anonymous: false\n      filter:\n        type: _none\npersonal_data:\n  '#type': fieldset\n  '#title': 'Personal Data'\n  name:\n    '#type': webform_name\n    '#title': Name\n    '#disabled': true\n    '#prepopulate': true\n    '#title__access': false\n    '#first__required': true\n    '#middle__access': false\n    '#last__required': true\n    '#suffix__access': false\n    '#degree__access': false\n    '#flexbox': '1'\n  telephone_number:\n    '#type': tel\n    '#title': 'Telephone Number'\n    '#disabled': true\n    '#prepopulate': true\nend_date:\n  '#type': date\n  '#title': 'End date'\n  '#date_date_format': ''\napproval_information:\n  '#type': fieldset\n  '#title': 'Approval Information'\n  time_limit:\n    '#type': date\n    '#title': 'Time Limit'\n    '#date_date_format': ''\n  justification:\n    '#type': textfield\n    '#title': Justification\n  approver:\n    '#type': webform_entity_select\n    '#title': Approver\n    '#select2': true\n    '#target_type': user\n    '#selection_handler': 'default:user'\n    '#selection_settings':\n      include_anonymous: true\n      filter:\n        type: _none"
+elements: |
+  search_for_external:
+    '#type': webform_wizard_page
+    '#title': 'Search for External'
+    search:
+      '#type': fieldset
+      '#title': Search
+      external_employee:
+        '#type': entity_autocomplete
+        '#title': 'External Employee'
+        '#target_type': user
+        '#selection_handler': 'default:user'
+        '#selection_settings':
+          include_anonymous: false
+          filter:
+            type: _none
+        '#required': true
+  edit_external:
+    '#type': webform_wizard_page
+    '#title': 'Edit External'
+    personal_data:
+      '#type': fieldset
+      '#title': 'Personal Data'
+      first_name:
+        '#type': textfield
+        '#disabled': true
+        '#title': 'First Name'
+      last_name:
+        '#type': textfield
+        '#disabled': true
+        '#title': 'Last Name'
+      telephone_number:
+        '#type': tel
+        '#title': 'Telephone Number'
+        '#disabled': true
+        '#prepopulate': true
+      employment_data:
+        '#type': fieldset
+        '#title': 'Employment Data'
+        end_date:
+          '#type': date
+          '#title': 'Termination Date'
+          '#required': true
+          '#date_date_format': ''
+      approval_information:
+        '#type': fieldset
+        '#title': 'Approval Information'
+        time_limit:
+          '#type': date
+          '#title': 'Time Limit'
+          '#date_date_format': ''
+        justification:
+          '#type': textfield
+          '#title': Justification
+        approver:
+          '#type': entity_autocomplete
+          '#title': Approver
+          '#target_type': user
+          '#selection_handler': 'default:user'
+          '#selection_settings':
+            include_anonymous: false
+            filter:
+              type: _none
 css: ''
 javascript: ''
 settings:
@@ -214,16 +276,13 @@ access:
     users: {  }
     permissions: {  }
 handlers:
-  spawn_maestro_workflow:
-    id: maestro
-    label: 'Spawn Maestro Workflow'
+  load_employee:
+    id: employee
+    label: 'Load Employee'
     notes: ''
-    handler_id: spawn_maestro_workflow
+    handler_id: load_employee
     status: true
     conditions: {  }
     weight: 0
-    settings:
-      maestro_template: create_external
-      maestro_message_success: ''
-      maestro_message_failure: ''
+    settings: {  }
 variants: {  }
