--- a/config/optional/webform.webform.move_external.yml
+++ b/config/optional/webform.webform.move_external.yml
@@ -2,8 +2,8 @@ langcode: en
 status: open
 dependencies:
   module:
-    - maestro_webform
     - os2forms
+    - os2forms_forloeb
     - webform_entity_print
 third_party_settings:
   os2forms:
@@ -34,7 +34,86 @@ id: move_external
 title: 'Move External'
 description: 'Move an external consultant to another organizational unit.'
 category: GIR
-elements: "find_external:\n  '#type': webform_wizard_page\n  '#title': 'Find External'\n  search:\n    '#type': fieldset\n    '#title': Search\n    external_employee:\n      '#type': entity_autocomplete\n      '#title': 'External Employee'\n      '#target_type': user\n      '#selection_handler': 'default:user'\n      '#selection_settings':\n        include_anonymous: true\n        filter:\n          type: _none\nmove_external:\n  '#type': webform_wizard_page\n  '#title': 'Move External'\n  personal_data:\n    '#type': fieldset\n    '#title': 'Personal Data'\n    name:\n      '#type': webform_name\n      '#title': Name\n      '#disabled': true\n      '#prepopulate': true\n      '#title__access': false\n      '#first__required': true\n      '#middle__access': false\n      '#last__required': true\n      '#suffix__access': false\n      '#degree__access': false\n      '#flexbox': '1'\n    consultancy:\n      '#type': webform_term_select\n      '#title': Consultancy\n      '#disabled': true\n      '#prepopulate': true\n      '#vocabulary': consultancies\n      '#breadcrumb_delimiter': ''\n    telephone_number:\n      '#type': tel\n      '#title': 'Telephone Number'\n      '#disabled': true\n      '#prepopulate': true\n  org_unit:\n    '#type': webform_term_select\n    '#title': 'Org Unit'\n    '#required': true\n    '#vocabulary': orgunit\n    '#breadcrumb_delimiter': ''\n  approval_information:\n    '#type': fieldset\n    '#title': 'Approval Information'\n    time_limit:\n      '#type': date\n      '#title': 'Time Limit'\n      '#date_date_format': ''\n    justification:\n      '#type': textfield\n      '#title': Justification\n    approver:\n      '#type': entity_autocomplete\n      '#title': Approver\n      '#target_type': user\n      '#selection_handler': 'default:user'\n      '#selection_settings':\n        include_anonymous: true\n        filter:\n          type: _none"
+elements: |
+  find_external:
+    '#type': webform_wizard_page
+    '#title': 'Find External'
+    search:
+      '#type': fieldset
+      '#title': Search
+      external_employee:
+        '#type': entity_autocomplete
+        '#title': 'External Employee'
+        '#target_type': user
+        '#selection_handler': 'default:user'
+        '#selection_settings':
+          include_anonymous: true
+          filter:
+            type: _none
+  move_external:
+    '#type': webform_wizard_page
+    '#title': 'Move External'
+    personal_data:
+      '#type': fieldset
+      '#title': 'Personal Data'
+      first_name:
+        '#type': textfield
+        '#title': 'First Name'
+      last_name:
+        '#type': textfield
+        '#title': 'Last Name'
+      consultancy:
+        '#type': webform_term_select
+        '#title': Consultancy
+        '#disabled': true
+        '#prepopulate': true
+        '#vocabulary': consultancies
+        '#breadcrumb_delimiter': ''
+      telephone_number:
+        '#type': tel
+        '#title': 'Telephone Number'
+        '#disabled': true
+        '#prepopulate': true
+    old_organizational_unit:
+      '#type': webform_entity_select
+      '#title': 'Old Organizational Unit'
+      '#target_type': taxonomy_term
+      '#selection_handler': 'default:taxonomy_term'
+      '#selection_settings':
+        target_bundles:
+          orgunit: orgunit
+        sort:
+          field: name
+          direction: ASC
+    new_organizational_unit:
+      '#type': entity_autocomplete
+      '#title': 'New Organizational Unit'
+      '#target_type': taxonomy_term
+      '#selection_handler': 'default:taxonomy_term'
+      '#selection_settings':
+        target_bundles:
+          orgunit: orgunit
+        auto_create: false
+        auto_create_bundle: orgunit
+    approval_information:
+      '#type': fieldset
+      '#title': 'Approval Information'
+      time_limit:
+        '#type': date
+        '#title': 'Time Limit'
+        '#date_date_format': ''
+      justification:
+        '#type': textfield
+        '#title': Justification
+      approver:
+        '#type': entity_autocomplete
+        '#title': Approver
+        '#target_type': user
+        '#selection_handler': 'default:user'
+        '#selection_settings':
+          include_anonymous: true
+          filter:
+            type: _none
 css: ''
 javascript: ''
 settings:
@@ -214,16 +293,13 @@ access:
     users: {  }
     permissions: {  }
 handlers:
-  spawn_maestro_workflow:
-    id: maestro
-    label: 'Spawn Maestro Workflow'
+  load_employee:
+    id: employee
+    label: 'Load Employee'
     notes: ''
-    handler_id: spawn_maestro_workflow
+    handler_id: load_employee
     status: true
     conditions: {  }
     weight: 0
-    settings:
-      maestro_template: create_external
-      maestro_message_success: ''
-      maestro_message_failure: ''
+    settings: {  }
 variants: {  }
