Updated reference to some drupal contrib modules
Updated fixed reference to some drupal contrib modules to dynamic to have ability update them via composer.

--- a/composer.json
+++ b/composer.json
@@ -47,10 +47,10 @@
     "drupal/ultimate_cron": "2.0.0-alpha5",
     "drupal/user_default_page": "2.0.0-rc1",
     "drupal/webform_composite": "1.0-rc2",
-    "drupal/webform_remote_handlers": "1.6.0",
-    "drupal/webform_rest": "4.0.0-beta2",
+    "drupal/webform_remote_handlers": "^1.6.0",
+    "drupal/webform_rest": "^4.0.0-beta2",
     "drupal/webform_scheduled_tasks": "^2.0",
-    "drupal/webform_views": "5.0.0-alpha7",
+    "drupal/webform_views": "^5.0.0-alpha7",
     "drupal/workflow_participants": "^2.4",
     "os2forms/os2forms_forloeb_profile": "dev-main",
     "vlucas/phpdotenv": "^4.0",
