--- a/config/optional/feeds.feed_type.cost_centers.yml
+++ b/config/optional/feeds.feed_type.cost_centers.yml
@@ -13,7 +13,7 @@ id: cost_centers
 label: 'Cost Centers'
 description: 'Import cost centers from GIR'
 help: "In order to import cost centers for GIR, you must create a feed of this Feed Type and enter a feed URL like this:\r\n\r\n<gir-toplevel-URL>/service/ou/<costcenters-uuid>/children\r\n\r\nwhere <costcenters-uuid> is the \"top level\" UUID for the list of cost centers."
-import_period: -1
+import_period: 3600
 fetcher: keycloakauth
 fetcher_configuration:
   auto_detect_feeds: 0
@@ -84,6 +84,7 @@ mappings:
     target: field_uuid
     map:
       value: uuid
-    unique: {  }
+    unique:
+      value: '1'
     settings:
       language: null
