--- a/config/optional/feeds.feed_type.consultancies.yml
+++ b/config/optional/feeds.feed_type.consultancies.yml
@@ -44,7 +44,7 @@ processor: 'entity:taxonomy_term'
 processor_configuration:
   langcode: en
   update_existing: 2
-  update_non_existent: _keep
+  update_non_existent: _delete
   expire: -1
   skip_hash_check: false
   values:
