--- a/config/optional/feeds.feed_type.employees.yml
+++ b/config/optional/feeds.feed_type.employees.yml
@@ -39,7 +39,7 @@ processor: 'entity:user'
 processor_configuration:
   langcode: en
   update_existing: 2
-  update_non_existent: _keep
+  update_non_existent: _delete
   expire: -1
   skip_hash_check: false
   owner_id: 0
